tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.error
exit status 1
panic: runtime error: index out of range [1] with length 1

goroutine 1 [running]:
main.insert({{0xc0000907f0?, 0xc0001207a0?, 0x0?}}, 0x0, {0x4e182e, 0x7})
	/workspace/mochi/tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.go:152 +0x7c5
main.insert_many(...)
	/workspace/mochi/tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.go:121
main.mochiMain()
	/workspace/mochi/tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.go:432 +0x150
main.main.func1(...)
	/workspace/mochi/tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.go:462
main.main()
	/workspace/mochi/tests/algorithms/transpiler/Go/data_structures/trie/radix_tree.go:469 +0x92
exit status 2